GenShen: Verifier should not touch claim token

XMLWordPrintable

    • gc

      GenShen is using parallel_threads_do for a verification step, but this uses a 'claim token' which is shared by normal gc activity. The verifier should not touch this shared state, lest it interfere with (or be interfered with by) the gc cycle.

            Assignee:
            William Kemper
            Reporter:
            William Kemper
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: