8344638: GenShen: Verifier should not touch claim token

Reviewed-by: shade